# ttn-platform-interface

./: .gitignore  README.md  build.sh  doover_config.json  pyproject.toml
.appgen/: PHASE.md  PLAN.md
src/ttn_platform_interface/: __init__.py  app_config.py  app_state.py  app_ui.py  application.py
tests/: test_imports.py
