[project]
name = "ttn-platform-interface"
version = "0.1.0"
description = "Allows other Doover apps to publish/receive configurable information to/from the TTN network via the Doover tag system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.13",
    "pydoover>=0.4.13",
]

[project.scripts]
export-config = "ttn_platform_interface.app_config:export"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "grpcio>=1.71.0",
    "protobuf>=6.30.2",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "requests>=2.32.3",
]

[tool.uv.sources]
pydoover = { git = "https://github.com/getdoover/pydoover", rev = "doover-2" }
